<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/cardViewEmptyDevices"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/card_elevation"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/constraintLayout_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

    <TextView
        android:id="@+id/textView_distance"
        style="@style/Subtitle1Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/there_are_no_app_users_detected"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_people"
        app:layout_constraintStart_toEndOf="@+id/imageView_people"
        app:layout_constraintTop_toTopOf="@+id/imageView_people"
        app:layout_constraintVertical_bias="0.97" />

    <ImageView
        android:id="@+id/imageView_people"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/person_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_nature" />

    <ImageView
        android:id="@+id/imageView_bluetooth_signal_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/bluetooth_signal_icon"
        app:layout_constraintBottom_toBottomOf="@+id/textView_distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_distance"
        app:srcCompat="@drawable/ic_bluetooth_good_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
